# dbt-state-oss

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: site.yml
backends/: index.html
compatibility/: index.html
dbt_state_oss/: __init__.py  __main__.py  fingerprint.py  store.py
docs/: FINDINGS.md  PROTOCOL.md  s3-state-backend-design.md
example_project/: dbt_project.yml  profiles.yml
example_project/models/marts/: customer_revenue.sql
example_project/models/staging/: stg_orders.sql
example_project/seeds/: raw_orders.csv
hosting/: index.html
how-it-works/: index.html
install/: index.html
search/: search_index.json
server/: __init__.py  __main__.py  servicers.py  store.py
tests/: test_make_store.py  test_s3_store.py  test_store_unit.py
website/: backends.md  compatibility.md  hosting.md  how-it-works.md  index.md  install.md
